Mdgen tags (#142)
* feat: add tags in tmpl

* chore: update example

* chore: update example
